# sailfin

./: .gitattributes  .gitignore  .mcp.json  .seed-version  AGENTS.md  BUILD.md  BUILD_SYSTEM_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COPYING  FINAL_CLEANUP_SUMMARY.md  GEMINI.md  LICENSE  Makefile  README.md  RUNTIME_LIBRARY_EXCEPTION  SECURITY.md  SEED_STABILIZATION.md  SELFHOSTING_CI_COMPLETED.md  SELFHOSTING_CI_TRANSITION.md  SELF_HOSTING_STATUS.md  TRADEMARKS  array_test.sfn  bootstrap.toml  build-self-hosting-new.sh  build-self-hosting.sh  build.csv  build.sh  build_compiler.sh  compile.csv  enbf.md  environment.yml  example.txt  install.ps1  install.sh  install_old.sh  llms.txt  output.txt  package-lock.json  (+24 more)
.claude/: loop.md  settings.json  settings.local.json
.claude/agents/: Sailbot.md  code-reviewer.md  compiler-architect.md  compiler-explorer.md  docs-updater.md  implementer.md  seed-stabilizer.md  test-runner.md
.claude/commands/: add-feature.md  audit.md  check.md  debug-compile.md  groom.md  perf.md  pickup.md  pin-seed.md  release-plan.md  release.md  sfep.md  sweep.md  test-feature.md  triage.md
.claude/hooks/: check-ulimit.sh  inject-git-context.sh  session-start.sh
.claude/output-styles/: compiler-engineer.md
.claude/prompts/: nightly-compiler-dry.md
.claude/rules/: c-sailfin-migration.md  change-discipline.md  code-style.md  compiler-safety.md  formatting.md  model-allocation.md  no-bash-e2e.md  proposals.md  seed-dependency.md  selfhost-invariant.md
.claude/scripts/: set-issue-type.sh  sync-project-status.sh
.codex/: README.md  config.toml  hooks.json
.codex/hooks/: check-ulimit.sh  inject-git-context.sh  session-start.sh
.github/: AGENTS.md  copilot-instructions.md  dependabot.yml  labels.yml  pull_request_template.md
bootstrap/: .gitignore  README.md  TESTING.md  __init__.py  ast_nodes.py  bootstrap.py  code_generator.py  compile_self_host.py  compiler.py  effect_checker.py  errors.py  fs_class_def.py  full_compiler.py  http_client_def.py  lexer.py  llvm.py  module_loader.py  output.py  parser.out  parser.py  parser_test.py  parsetab.py  program  program.s  project_ast.py  project_parser.py  pyproject.toml  runtime_support.py  simplified_compiler.py  test_all_examples.py  test_array_access.py  test_array_element.py  test_array_index_test.py  test_ast.py  test_dict.sfn  test_examples_runner.py  test_field_access2.py  test_first_part.py  test_function.py  test_generic_full.sfn  (+20 more)
bootstrap/sailfin/: __init__.py  io.py  net.py
bootstrap/tests/: conftest.py  test_compiler_codegen.py  test_compiler_sources.py  test_examples.py  test_self_hosted.py  test_sfn.py  test_unit_effects.py  test_unit_parser.py  test_unit_typecheck.py
compiler/: README.md  ast.py  ast.sfn  build.sh  capsule.toml  codegen.sfn  codegen_simple.sfn  compiler.sfn  comprehensive_test.sfn  decorator_semantics.py  demo.sfn  emit_native.py  example_output.s  interpreter.sfn  invalid_mut.sfn  lexer.py  lexer.sfn  main.sfn  minimal_compiler_test.sfn  native_ir.py  parser.sfn  reference.c  reference.s  simple_import_test.sfn  simple_main.sfn  simple_test.s  simplified_compiler.sfn  string_utils.py  test.sfn  test_arm64  test_arm64.s  test_macos.s  token.py
compiler/src/: ast.sfn  (+89 more)
docs/: README.md  aot-prepare-retirement.md  arrays.md  build-performance.md  compiler.md  conflict-resolution-log.md  development-setup.md  enbf.md  functions.md  keywords.md  loops.md  mutability.md  package-management.md  release-signing.md  roadmap.md  runtime-performance.md  runtime_abi.md  runtime_aliasing_inventory.md  runtime_architecture.md  runtime_audit.md  self-hosting.md  spec.md  stage2-debugging.md  status.md  style-guide.md
examples/: README.md  sailfin.toml
extension/: LICENSE  README.md  package-lock.json  package.json
runtime/: __init__.py  capsule.toml  native_runner.py  native_runner_impl.py  prelude.sfn  runtime_support.py  stage2_runner.py  stage2_runtime_stub.c
scripts/: __init__.py  agent_report.sh  aot_prepare.py  bench_compile.sh  bench_runtime.sh  bootstrap_native.py  bootstrap_stage2.py  build.sh  check-examples.sh  corpus-run.sh  detect_build_jobs.sh  detect_test_jobs.sh  diag_determinism_sweep.sh  diag_emit_harness.sh  diag_sanitizer_sweep.sh  diag_stage_import.sh  diag_valgrind_sweep.sh  e2e_bash_allowlist.txt  install_precommit.sh  install_stage1.py  linear-priority-sync.sh  lint_no_implicit_reexports.py  lint_no_new_e2e_bash.sh  migrate_colon_annotations.py  perf_history.sh  run_native_test.sh  selfhost_native.py  selfhost_native_stage2.py  selfhost_smoke_native.py  selfhost_smoke_native_stage2.py  setup-github-labels.sh  sign-release-manifest.sh  smoke.sh  sync-issue-to-project.sh  test_arena.sh  test_llvm_gen.py  test_login.sh  test_shards.sh
self_host_tmp/: ast.py  code_generator.py  decorator_semantics.py  effect_checker.py  emit_native.py  emitter_sailfin.py  lexer.py  main.py  native_ir.py  native_llvm_lowering.py  native_lowering.py  parser.py  token.py  typecheck.py
self_hosted/: README.md
sfn/: README.md  package-lock.json  package.json
site/: astro.config.mjs  package-lock.json  package.json  wrangler.jsonc
src/: index.ts
stage0/: __init__.py  bootstrap.py  code_generator.py  compile_stage1.py  effect_checker.py  lexer.py  runtime_support.py
tools/: check_seed_llvm_emission.py  compile_with_stage1.py  download_stage2_seed.py  native_compile_benchmark.py  package.sh  package_native.py  package_stage1.py  package_stage2.py  patch_stage2_llvm_strings.py  prepare_stage2_aot.py  prepare_stage2_aot_text.py  run_native_examples.py  run_stage2_examples.py  stage2_compile_benchmark.py
vscode/: CHANGELOG.md  package.json
(+2153 files in other folders)
