[project]
name = "bootstrap"
version = "0.0.1"
description = "Bootstrap compiler for the Sailfin Language"
authors = [
    { name = "Michael Curtis", email = "michael@sailfin.io" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "ply (>=3.11,<4.0)",
    "llvmlite (>=0.44.0,<0.45.0)",
    "aiohttp (>=3.11.11,<4.0.0)",
    "pyinstaller (>=6.11.1,<7.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^9.17.0"

[tool.semantic_release]
version_source = "tag"
upload_to_pypi = false
build_command = "pyinstaller --onefile --name sfn bootstrap.py"
version_variables = ["__init__.py:__version__"]
commit_parser = "conventional"
logging_use_named_masks = true

# Branch configuration (dict-of-tables style expected by python-semantic-release >=9)
[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.beta]
match = "beta"
prerelease = true
prerelease_token = "beta"

# Remove explicit plugins block to allow python-semantic-release defaults (ensures commit analysis & git/github plugins run in correct order)

[tool.semantic_release.changelog]
directory = "bootstrap"
filename = "CHANGELOG.md"
include_v_prefix = true

[tool.semantic_release.git]
tag_template = "v{version}"
commit_author = "semantic-release-bot <bot@example.com>"

[tool.semantic_release.github]
release_method = "github"
assets = ["dist/sfn"]
